--- a/style.css
+++ b/style.css
@@ -3,16 +3,29 @@ body {
     flex-direction: column;
 }
 
+h4 {
+    display:flex;
+    margin-left:200px;
+    color: white;
+}
+
+.top-header {
+    display:flex;
+}
+
 .header {
     background-color:#1F2937;
     display:flex;
-    justify-content:flex-end;
     height:300px;
+    flex-wrap:wrap;
 }
 
 ul {
     display:flex;
-    justify-content:flex-end;
+    gap:16px;
+    color:white;
+    list-style: none;
+    padding:4px;
 }
 
 .logo {
@@ -30,6 +43,8 @@ button {
 .container {
     display:flex;
     height:300px;
+    align-items: center;
+    gap: 52px;
 }
 
 .section-2 {
@@ -37,8 +52,6 @@ button {
     height:300px;
     background-color:#E5E7EB;
 }
-
-
 
 .footer {
     background-color:#1F2937;
