--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ h4 {
 
 .top-header {
     display:flex;
+    margin-bottom:20px;
+    margin-left:150px;
 }
 
 .header {
@@ -18,6 +20,7 @@ h4 {
     display:flex;
     height:300px;
     flex-wrap:wrap;
+    margin-bottom:200px;
 }
 
 ul {
@@ -34,11 +37,34 @@ ul {
     font-weight: extra-bold;
 }
 
+.box{
+    margin-left:325px;
+    gap: 16px;
+    color:white;
+    width: 650px;
+    flex-
+}
+
+span {
+    display:flex;
+    float:right;
+   
+    gap:16px;
+}
+
 button {
     display:flex;
     align-items: center;
     border-radius:10%;
 }
+
+h2 {
+    display:flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom:0px;
+}
+
 
 .container {
     display:flex;
