--- a/style.css
+++ b/style.css
@@ -66,11 +66,19 @@ img {
     margin-left:50px;
 }
 
+.section-1 {
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+}
+
 h2 {
     display:flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top:8px;
+    justify-content:center;
+    flex-wrap:wrap;
+    align-items:center;
+    margin-top:150px;
+    margin-left:100px;
 }
 
 
@@ -78,13 +86,23 @@ h2 {
     display:flex;
     height:300px;
     align-items: center;
+    justify-items: center;
     gap: 52px;
+    padding: 8px;
+    margin-left: 200px;
 }
 
 .section-2 {
     display:flex;
-    height:300px;
+    height:400px;
+    width: 2000px;
     background-color:#E5E7EB;
+}
+
+.section-3 {
+    display: flex;
+    flex-direction: column;
+    margin-top:100px;
 }
 
 .footer {
