--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ img {
     display: flex;
     flex-direction: column;
     height: 400px;
+    color: #1F2937;
 }
 
 h2 {
@@ -94,10 +95,18 @@ h2 {
 
 .section-2 {
     display:flex;
+    flex-direction:column;
     height:400px;
     width: 2000px;
     background-color:#E5E7EB;
-}
+    font-style:light italic;
+    font-size:36px;
+    justify-content:center;
+    align-items:center;
+    margin-top:100px;
+    color: #1F2937;
+    
+    
 
 .section-3 {
     display: flex;
