--- a/style.css
+++ b/style.css
@@ -105,16 +105,23 @@ h2 {
     align-items:center;
     margin-top:100px;
     color: #1F2937;
-    
-    
+}
+
 
 .section-3 {
     display: flex;
     flex-direction: column;
     margin-top:100px;
+    width:1000px;
+    background-color:#3882F6;
+    padding: 20px;
+    border-radius:10px;
+    color:white;
+    font-size:24px;
 }
 
 .footer {
+    flex-direction:column;
     background-color:#1F2937;
     color: white;
     font-size: 18px;
